--- a/css/navigation.css
+++ b/css/navigation.css
@@ -7,12 +7,36 @@
   display: table;
   position: relative;
   font-family: inherit;
-  background-color: #fff;
+  background-color: transparent;
 }
-
-.navigation-fixed-wrapper{
-  background-color: #fff;
+.scroll{
+  background-color: #ffffff !important;
   border-bottom: 1px solid #eee;
+  -webkit-transition: background-color 300ms ease;
+  -ms-transition: background-color 300ms ease;
+  transition: background-color 300ms ease;
+}
+/* .scroll-nav-menu > li > a{
+  color: #222 !important;
+} */
+.logo-text-lg{
+  font-family: sans-serif;
+  font-size: 44px;
+  color: #2A6BBF;
+  font-weight: 600;
+  margin-top: -24px;
+}
+.logo-text-sm{
+  color: #222;
+  font-size: 11px;
+  margin-top: -20px;
+  font-family: sans-serif;
+  line-height: initial;
+  padding-left: 2px;
+}
+.navigation-fixed-wrapper{
+  background-color: transparent;
+  /* border-bottom: 1px solid #eee; */
   box-shadow: 0 0 65px rgba(0,0,0,.09);
   z-index: 2;
   position: relative;
@@ -87,7 +111,7 @@
 }
 @media (min-width: 991px) {
   .nav-header {
-    height: 95px;
+    height: 90px;
     display: flex;
     align-items: center;
   }
@@ -261,8 +285,8 @@
   align-items: center;
   position: relative;
   text-decoration: none;
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 18px;
+  font-weight: 400;
   text-transform: uppercase;
   color: #222;
   -webkit-transition: color 0.3s, background 0.3s;
@@ -345,7 +369,7 @@
   display: block;
   border-style: solid;
   border-width: 0 1px 1px 0;
-  border-color: transparent #70798b #70798b transparent;
+  /* border-color: transparent #70798b #70798b transparent; */
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -573,7 +597,7 @@
 
 /* DROPDOWN EXTENSION */
 .nav-dropdown {
-  min-width: 200px;
+  min-width: 250px;
   margin: 0;
   padding: 0;
   display: none;
@@ -613,7 +637,7 @@
   display: inline-block;
   text-decoration: none;
   float: left;
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 500;
   color: #70798b;
   background-color: #fff;
