--- a/css/slider.css
+++ b/css/slider.css
@@ -258,12 +258,15 @@ Main Image Section Styles
   overflow: hidden;
   list-style: none;
   padding: 0;
-  z-index: 1; 
+  z-index: 1;
+  width: 100%;
+  /* background: #0d2e58e8; */
+  /* box-shadow: 4px 4px 30px #2a6bbf; */
 }
 
 
 .main-image-content h2{
-  font-size: 50px;
+  font-size: 60px;
   color: #fff;
   line-height: 1.4;
   font-weight: 600;
